@@ -1,4 +1,4 @@
-# $Id: KeyboardMarathon.pm,v 1.11 2012/04/11 18:16:01 cvs Exp $
+# $Id: KeyboardMarathon.pm,v 1.13 2012/04/11 18:27:01 cvs Exp $
 # $Source: /opt/cvs/repository/perl-ACME-KeyboardMarathon/lib/ACME/KeyboardMarathon.pm,v $
 
 package ACME::KeyboardMarathon;
@@ -74,6 +74,12 @@ ACME::KeyboardMarathon - How far have your fingers ran?
 
   my $distance_in_cm = $akm->distance($bigtext);
 
+NB: Included in this distribution is an example script (marathon.pl) that can
+be used to calculate distance from files provided as arguments:
+
+  $> ./marathon.pl foo.txt bar.txt baz.txt
+  114.05 m
+
 =head1 DESCRIPTION
 
 ACME::KeyboardMarathon will calculate the approximate distance traveled by
@@ -95,8 +101,8 @@ by the finger.
 Additionally, use of the shift key was tracked and its distance was included
 for each calculation.
 
-This produces an index of "distance travelled" for each possible key-press, 
-which is then used to calculate the "total distance travelled" for a given
+This produces an index of "distance traveled" for each possible key-press, 
+which is then used to calculate the "total distance traveled" for a given
 piece of text.
 
 =head1 BUGS AND LIMITATIONS
